PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Feb 2004, Version 4.3.5
- Fixed bug #27337 (missing sapi_shutdown() in sapi/isapi causes memory leak). 
  (Jani, msisolak at yahoo dot com)
- Fixed bug #27328 (ftp extension relies on 32-bit longs). (Sara)
- Fixed bug #27295 (memory leak inside sscanf()). (Ilia)
- Fixed bug #27293 (two crashes inside image2wbmp()). (Ilia)
- Fixed bug #27278 (*printf() functions treat arguments as if passed by
  reference). (Ilia)
- Fixed bug #26753 (zend_fetch_list_dtor_id() doesn't check NULL strings).
  (Jani, Markus dot Lidel at shadowconnect dot com)

16 Feb 2004, Version 4.3.5RC3
- Fixed zero bytes memory allocation when no extra ini files are found in the
  --with-config-file-scan-dir specified directory. (Eric Colinet, Derick)
- Fixed bug #27354 (Modulus operator crashes PHP). (Derick)
- Fixed bug #27235 (Interbase NUMERIC x.0 field returns empty string on 0).
  (Ard)
- Fixed bug #27196 (Missing content_length initialization in apache 2 sapis).
  (Ilia, pdoru at kappa dot ro)
- Fixed bug #27183 (userland stream wrapper segfaults on stream_write).
  (Moriyoshi)
- Fixed bug #27175 (tzset() is not being called by PHP on startup).
  (Ilia, sagawa at sohgoh dot net)
- Fixed bug #27172 (Possible floating point exception in gmp_powm()). (Ilia)
- Fixed bug #27171 (crash inside gmp_hamdist()). (Jani)
- Fixed bug #27157 (Compile Failure on Solaris 8). (Timm)
- Fixed bug #27149 (broken CLOB support in oci8 extension). (Antony)
- Fixed bug #27135 (Possible crash inside mb_strlen()). (Moriyoshi)
- Fixed bug #27104 (CLI/CGI SAPI module variable name conflict). (Marcus)
- Fixed bug #27026 (Added "cgi.nph" php.ini option to allow forcing of
  the 'Status: 200' header that is not normally needed). (Ilia)
- Fixed bug #26862 (ob_flush() followed by output_reset_rewrite_vars() may